[package]
name = "wsl"
version = "0.2.0"
description = "Detect if the program is running under Windows Subsystem for Linux"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
edition = "2018"

readme = "README.md"
license = "MIT"
repository = "https://github.com/Dentosal/wsl-rs"
keywords = ["wsl", "windows", "run-time", "detection"]
categories = ["os"]

[target.'cfg(target_os = "linux")'.dependencies]
 once_cell = "1.13.1"
